# HACKATHON-II_PHASE-2

./: CLAUDE.md  temp_feature_spec.md
.claude/agents/: backend-api-builder.md  database-auth-specialist.md  frontend-ui-nextjs.md
.specify/memory/: constitution.md
backend/: .env  .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt
backend/history/prompts/001-jwt-auth-backend/: 008-jwt-auth-implementation.jwt-auth-backend.prompt.md
backend/src/: exceptions.py  main.py
backend/src/auth/: README.md  __init__.py  dependencies.py  jwt.py
backend/src/database/: connection.py  session.py
backend/src/middleware/: jwt_middleware.py
backend/src/models/: auth.py  auth_validation.py  base.py  task.py  task_model.py  user_model.py
backend/src/routes/: auth.py  protected.py  tasks.py
backend/src/schemas/: task_schemas.py
backend/src/services/: task.py  task_service.py
backend/src/utils/: errors.py  logging.py  uuid_generator.py
backend/tests/: conftest.py
backend/tests/auth/: test_dependencies.py  test_full_auth_flow.py  test_jwt.py  test_us1_protected_access.py  test_us2_token_validation.py  test_us3_consistent_security.py
backend/tests/integration/: test_task_endpoints.py
backend/tests/task/: test_authorization_base.py
backend/tests/unit/: test_task_model.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  validate-auth.ts
specs/001-auth-aware-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth-jwt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+146 files in other folders)
